# my-blockbuster

./: Cargo.toml  Rocket.toml
migrations/: 20240301224312_setup_table.sql
src/: api.rs  client.rs  main.rs  model.rs  omdb.rs  root.rs  web.rs
src/model/: mod.rs  request.rs  response.rs
src/model/omdb/: mod.rs
src/omdb/: mod.rs
src/web/: mod.rs  request_source.rs  routes.rs
templates/: add.html.tera  base.html.tera  index.html.tera  movie.html.tera  search_result.html.tera
templates/error/: 404.html.tera
templates/snippets/: add.html.tera  index.html.tera  movie.html.tera  search_result.html.tera
