[package]
name = "my-blockbuster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
reqwest = { version = "0.11.24", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"] }
serde = { version = "1.0.197", features = ["std", "derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["sqlite"] }
sqlx-sqlite = "0.7.3"
tera = "1.19.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]

